// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExploreBar component renders correctly 1`] = `
<div>
  <nav
    aria-labelledby="explore-bar"
    class="ExploreBar-root-1"
  >
    <h2
      class="MuiTypography-root ExploreBar-heading-2 Typography-root-4 MuiTypography-h6"
      data-testid="typography"
      id="explore-bar"
    >
      Explore:
    </h2>
    <a
      aria-disabled="false"
      class="MuiButtonBase-root MuiButton-root Button-root-12 MuiButton-outlined Button-opaqueOutlined-19 ExploreBar-link-3 MuiButton-outlinedPrimary"
      href="world"
      tabindex="0"
    >
      <span
        class="MuiButton-label Button-label-15"
      >
        hello
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
  </nav>
</div>
`;

exports[`ExploreBar component renders with a link using a component 1`] = `
<div>
  <nav
    aria-labelledby="explore-bar"
    class="ExploreBar-root-94"
  >
    <h2
      class="MuiTypography-root ExploreBar-heading-95 Typography-root-97 MuiTypography-h6"
      data-testid="typography"
      id="explore-bar"
    >
      Hello world
    </h2>
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiButton-root Button-root-105 MuiButton-outlined Button-opaqueOutlined-112 ExploreBar-link-96 MuiButton-outlinedPrimary"
      role="button"
      tabindex="0"
      to="/world"
    >
      <span
        class="MuiButton-label Button-label-108"
      >
        Hello
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </nav>
</div>
`;

exports[`ExploreBar component renders with different heading 1`] = `
<div>
  <nav
    aria-labelledby="explore-bar"
    class="ExploreBar-root-63"
  >
    <h2
      class="MuiTypography-root ExploreBar-heading-64 Typography-root-66 MuiTypography-h6"
      data-testid="typography"
      id="explore-bar"
    >
      Hello world
    </h2>
    <a
      aria-disabled="false"
      class="MuiButtonBase-root MuiButton-root Button-root-74 MuiButton-outlined Button-opaqueOutlined-81 ExploreBar-link-65 MuiButton-outlinedPrimary"
      href="/world"
      tabindex="0"
    >
      <span
        class="MuiButton-label Button-label-77"
      >
        Hello
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
  </nav>
</div>
`;

exports[`ExploreBar component renders with multiple links 1`] = `
<div>
  <nav
    aria-labelledby="explore-bar"
    class="ExploreBar-root-32"
  >
    <h2
      class="MuiTypography-root ExploreBar-heading-33 Typography-root-35 MuiTypography-h6"
      data-testid="typography"
      id="explore-bar"
    >
      Explore:
    </h2>
    <a
      aria-disabled="false"
      class="MuiButtonBase-root MuiButton-root Button-root-43 MuiButton-outlined Button-opaqueOutlined-50 ExploreBar-link-34 MuiButton-outlinedPrimary"
      href="/tools"
      tabindex="0"
    >
      <span
        class="MuiButton-label Button-label-46"
      >
        Tools
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
    <a
      aria-disabled="false"
      class="MuiButtonBase-root MuiButton-root Button-root-43 MuiButton-outlined Button-opaqueOutlined-50 ExploreBar-link-34 MuiButton-outlinedPrimary"
      href="/engineering-guides"
      tabindex="0"
    >
      <span
        class="MuiButton-label Button-label-46"
      >
        Engineering guides
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
    <a
      aria-disabled="false"
      class="MuiButtonBase-root MuiButton-root Button-root-43 MuiButton-outlined Button-opaqueOutlined-50 ExploreBar-link-34 MuiButton-outlinedPrimary"
      href="/training"
      tabindex="0"
    >
      <span
        class="MuiButton-label Button-label-46"
      >
        Training
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
    <a
      aria-disabled="false"
      class="MuiButtonBase-root MuiButton-root Button-root-43 MuiButton-outlined Button-opaqueOutlined-50 ExploreBar-link-34 MuiButton-outlinedPrimary"
      href="/frequently-asked-questions"
      tabindex="0"
    >
      <span
        class="MuiButton-label Button-label-46"
      >
        Frequently asked questions
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
  </nav>
</div>
`;
